<resources>
    <string name="app_name">SocialMusic</string>
    <string name="password">Password</string>
    <string name="email">Email address</string>
    <string name="sing_up">SIGN UP</string>
    <string name="forgot_password">Forgot password</string>
    <string name="logo">logo</string>
    <string name="forgot_psw_message">Please enter your e-mail address.A link to change your password will be send to your inbox.</string>
    <string name="submit">Submit</string>
    <string name="profile_picture">Profile picture</string>
    <string name="username" translatable="false">Nickname</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="musical_instruments">Instruments</string>
    <string name="musical_genres">Genres</string>
    <string name="mail_error">Please enter a valid email address!</string>
    <string name="mail_sent">Recovery mail sent!</string>
    <string name="account_not_found">Account does not exist!</string>
    <string name="invalid_account">Incorrect username or password!</string>
    <string name="password_error">The password must contain at least 8 characters!</string>
    <string name="edit_profile">Edit profile</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="city">City</string>
    <string name="sing_in_done">Registered, check your e-mail box!</string>
    <string name="empty_string">This field cannot be empty!</string>
    <string name="save">Save</string>
    <string name="title_activity_maps">maps</string>
    <string name="title_activity_home">SocialMusic</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">LOGIN</string>
    <string name="back_to_register_page" translatable="false">Back to register page</string>
    <string name="invalidEmail">This email address is not valid!</string>
    <string name="invalidPassword">This password is not valid!! Must have at least 6 characters.</string>
    <string name="empty_user_psw">Please, enter email address and password!</string>
    <string name="creation_success">User created successfully!</string>
    <string name="creation_failure">User creation failure!</string>
    <string name="login_failed">Login failed!</string>
    <string name="select_photo">SELECT PHOTO</string>
    <string name="update_success">Image update successfully!</string>
    <string name="msg_token_fmt" translatable="false" />
    <string name="sign_up">SIGN UP</string>
    <string name="no_messages">Nothing to show yet!</string>
    <string name="verified">VERIFIED</string>
    <string name="verify_email_message">Check your inbox and click on the link to verify your email address to continue!</string>
    <string name="verify_mail_address">Verify your email address to continue!</string>
    <string name="confirm">Confirm</string>
    <string name="nickname_name_surname_email">Nickname / Name / Surname / Email</string>
    <string name="edit">edit</string>
    <string name="edit_email">Edit email</string>

    <string-array name="instruments">
        <item>Drum</item>
        <item>Guitar</item>
        <item>Electric guitar</item>
        <item>Flute</item>
        <item>Piano</item>
        <item>Violin</item>
        <item>Bass</item>
        <item>Singer</item>
    </string-array>
    <string-array name="genres">
        <item>Rock</item>
        <item>Metal</item>
        <item>Pop</item>
        <item>Jazz</item>
        <item>Classic</item>
        <item>Funky</item>
        <item>Blues</item>
        <item>Rap</item>
    </string-array>
    <string name="change_email_message">Insert your new Email Address. A verification email will be send to your inbox.</string>
    <string name="delete">Delete</string>
    <string name="none">None</string>
    <string name="send">Send</string>
    <string name="write_a_message">Write a message..</string>
    <string name="word" translatable="false">Word</string>
    <string name="edit_password">Edit password</string>
    <string name="maps_image">Maps image</string>
    <string name="search">Search</string>
    <string name="message">Message</string>
    <string name="home">Home page</string>
    <string name="chat">Chat</string>
    <string name="search_users">Search users</string>
    <string name="profile">Profile</string>
    <string name="google_maps" translatable="false">Google Maps</string>
    <string name="fill_all_the_fields">Please, fill all the text fields!</string>
    <string name="nick_taken">This nickname is already taken!</string>
    <string name="changes_saved">Changes saved</string>
    <string name="delete_alert_message">Are you sure you want delete your account? This operation cannot be undone!</string>
    <string name="location_error">Localization error, please check the address entered</string>
    <string name="post_yours">This post is yours!</string>
    <string name="what_s_on_your_mind">What\'s on your mind?</string>
    <string name="all">All</string>
    <string name="open_chat">open chat</string>
    <string name="alert_title">SocialMusic Alert</string>
    <string name="r_u_sure">Are you sure?</string>
    <string name="time_format">dd/MM/yy hh:mm a</string>
    <string name="write_something">Write something to post!</string>
</resources>