<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green"
    android:padding="32dp">

    <EditText
        android:id="@+id/email_editText_login"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="16dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray_hint"
        app:layout_constraintEnd_toEndOf="@+id/logo_imageView_login"
        app:layout_constraintStart_toStartOf="@+id/logo_imageView_login"
        app:layout_constraintTop_toBottomOf="@+id/logo_imageView_login" />

    <EditText
        android:id="@+id/password_editText_login"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="16dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray_hint"
        app:layout_constraintEnd_toEndOf="@+id/email_editText_login"
        app:layout_constraintStart_toStartOf="@+id/email_editText_login"
        app:layout_constraintTop_toBottomOf="@+id/email_editText_login" />

    <android.widget.Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_button"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/password_editText_login"
        app:layout_constraintStart_toStartOf="@+id/password_editText_login"
        app:layout_constraintTop_toBottomOf="@+id/password_editText_login" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_button"
        android:text="@string/sing_up"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/login_button"
        app:layout_constraintStart_toStartOf="@+id/login_button"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <Button
        android:id="@+id/buttonForgot"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/rounded_button"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonSignUp"
        app:layout_constraintStart_toStartOf="@+id/buttonSignUp" />

    <ImageView
        android:id="@+id/logo_imageView_login"
        android:layout_width="0dp"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@mipmap/ic_logo_social_round" />

</androidx.constraintlayout.widget.ConstraintLayout>