<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".home.SearchFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/user_recyclerView_search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/rounded_textview"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/name_editText_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name_editText_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/nickname_name_surname_email"
        android:inputType="textPersonName"
        android:minHeight="35dp"
        android:paddingLeft="16dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray_hint"
        app:layout_constraintBottom_toTopOf="@id/genre_Spinner_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_recyclerView_search" />

    <TextView
        android:id="@+id/genres_textView_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_textview"
        android:gravity="center"
        android:minHeight="35dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/musical_genres"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/instruments_textView_search"
        app:layout_constraintEnd_toStartOf="@+id/genre_Spinner_search"
        app:layout_constraintStart_toStartOf="@id/name_editText_search"
        app:layout_constraintTop_toBottomOf="@+id/name_editText_search" />

    <Spinner
        android:id="@+id/instrument_Spinner_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:gravity="center_vertical"
        android:minHeight="35dp"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@id/search_button_search"
        app:layout_constraintEnd_toEndOf="@+id/genre_Spinner_search"
        app:layout_constraintHeight_min="35dp"
        app:layout_constraintStart_toEndOf="@+id/instruments_textView_search"
        app:layout_constraintTop_toBottomOf="@+id/genre_Spinner_search" />

    <TextView
        android:id="@+id/instruments_textView_search"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_textview"
        android:gravity="center"
        android:minHeight="35dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/musical_instruments"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/search_button_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genres_textView_search" />

    <Spinner
        android:id="@+id/genre_Spinner_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:gravity="center_vertical"
        android:minHeight="35dp"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@id/instrument_Spinner_search"
        app:layout_constraintEnd_toEndOf="@+id/name_editText_search"
        app:layout_constraintHeight_min="35dp"
        app:layout_constraintStart_toEndOf="@+id/genres_textView_search"
        app:layout_constraintTop_toBottomOf="@+id/name_editText_search" />

    <android.widget.Button
        android:id="@+id/search_button_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_button"
        android:gravity="center"
        android:minHeight="35dp"
        android:text="@string/search"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/instrument_Spinner_search"
        app:layout_constraintStart_toStartOf="@+id/instruments_textView_search"
        app:layout_constraintTop_toBottomOf="@+id/instrument_Spinner_search" />

    <TextView
        android:id="@+id/message_textView_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:background="@android:color/transparent"
        android:text="@string/no_messages"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emoji_textView_search" />

    <TextView
        android:id="@+id/emoji_textView_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:background="@android:color/transparent"
        android:text="🦧"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/user_recyclerView_search"
        app:layout_constraintEnd_toEndOf="@+id/message_textView_search"
        app:layout_constraintStart_toStartOf="@+id/message_textView_search"
        app:layout_constraintTop_toTopOf="@+id/user_recyclerView_search" />

</androidx.constraintlayout.widget.ConstraintLayout>