<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment"
    android:background="@color/white"
    android:padding="12dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="12dp"
        android:contentDescription="@string/profile_picture"
        app:layout_constraintBottom_toTopOf="@id/table"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/default_profile" />

    <TableLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/bottomRow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="45dp">

            <TextView
                android:id="@+id/textViewNickname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:gravity="center"
                android:text="@string/nickame"
                android:textAlignment="viewEnd"
                android:textColor="@color/black"
                android:textSize="15dp"
                tools:ignore="RtlCompat" />

            <EditText

                android:id="@+id/editTextNickname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:autofillHints=""
                android:layout_margin="10dp"
                android:ems="10"
                android:gravity="center"
                android:inputType="textMultiLine"
                android:textColor="@color/black"
                android:textSize="15dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="45dp">

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:gravity="center"
                android:text="@string/name"
                android:textAlignment="viewEnd"
                android:textColor="@color/black"
                android:textSize="15dp"
                tools:ignore="RtlCompat" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_margin="10dp"
                android:ems="10"
                android:gravity="center"
                android:inputType="textMultiLine"
                android:textColor="@color/black"
                android:textSize="15dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="45dp">

            <TextView
                android:id="@+id/textViewSurname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:gravity="center"
                android:text="@string/surname"
                android:textAlignment="viewEnd"
                android:textColor="@color/black"
                android:textSize="15dp"
                tools:ignore="RtlCompat" />

            <EditText
                android:id="@+id/editTextSurname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_margin="10dp"
                android:ems="10"
                android:gravity="center"
                android:inputType="textMultiLine"
                android:textColor="@color/black"
                android:textSize="15dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="45dp">

            <TextView
                android:id="@+id/textAddress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:gravity="center"
                android:text="@string/address"
                android:textAlignment="viewEnd"
                android:textColor="@color/black"
                android:textSize="15dp"
                tools:ignore="RtlCompat" />

            <EditText
                android:id="@+id/editTextAddress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_margin="10dp"
                android:ems="10"
                android:gravity="center"
                android:inputType="textMultiLine"
                android:textColor="@color/black"
                android:textSize="15dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="45dp">

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:gravity="center"
                android:text="@string/email"
                android:textAlignment="viewEnd"
                android:textColor="@color/black"
                android:textSize="15dp"
                tools:ignore="RtlCompat" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_margin="10dp"
                android:ems="10"
                android:gravity="center"
                android:inputType="textMultiLine"
                android:textColor="@color/black"
                android:textSize="15dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="45dp">

            <TextView
                android:id="@+id/textViewInstruments"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:gravity="center"
                android:text="@string/musical_instruments"
                android:textAlignment="viewEnd"
                android:textColor="@color/black"
                android:textSize="15dp"
                tools:ignore="RtlCompat" />

            <Spinner
                android:id="@+id/spinnerInstruments"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_column="1"
                android:textSize="15dp" />

            <ImageView
                android:id="@+id/editInstruments"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_column="2"
                android:src="@mipmap/edit_foreground" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="45dp">

            <TextView
                android:id="@+id/textViewGenres"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:gravity="center"
                android:text="@string/musical_genres"
                android:textAlignment="viewEnd"
                android:textColor="@color/black"
                android:textSize="15dp"
                tools:ignore="RtlCompat" />

            <Spinner
                android:id="@+id/spinnerGenres"
                android:layout_column="1"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="15dp" />

            <ImageView
                android:id="@+id/editGenres"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_column="2"
                android:src="@mipmap/edit_foreground" />

        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/bottomRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:stretchColumns="*"
        app:layout_constraintTop_toBottomOf="@+id/table"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="45dp" >

            <Button
                android:id="@+id/buttonEdit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:background="@android:drawable/list_selector_background"
                android:text="@string/edit_profile"
                android:textAlignment="center"
                android:textColor="#0000FF" />

            <Button
                android:id="@+id/buttonLogout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:background="@android:drawable/list_selector_background"
                android:text="@string/logout"
                android:textAlignment="center"
                android:textColor="@color/design_default_color_error" />

            <ImageView
                android:id="@+id/mapsButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:src="@mipmap/google_maps_foreground" />


        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>